# market-research

./: .env.example  .gitignore  DOCUMENTATION_OF_UNDERSTANDING.md  Makefile  README.md  pyproject.toml
backend/: interview_platform.sqlite3-journal
backend/apps/agents/: apps.py  models.py  serializers.py  system_catalog.py  urls.py  views.py
backend/apps/common/: models.py
backend/apps/messaging/: apps.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/monitoring/: models.py  serializers.py  urls.py  views.py
backend/apps/runs/: models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/services/channels/: discord.py  discord_bot.py  discord_startup.py
backend/services/runtime/: artifacts.py  final_responder.py  guardrails.py  langgraph_workflow.py  llm_client.py  node_runner.py  planner.py  tool_registry.py  workflow_templates.py
docs/: PROBLEM_ANALYSIS_AND_SOW.md  architecture-diagram.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: CrudSubHeader.jsx  GlobalHeader.jsx
frontend/src/state/: editorState.js
frontend/src/styles/: app.css
scripts/: run_full.py
tests/: conftest.py  test_agentic_openrouter_config.py  test_agentic_quality_gate.py  test_agentic_skills.py  test_agentic_tool_trace.py  test_auto_trade.py  test_calendar.py  test_learning_loop.py  test_logging.py  test_mcp_context.py  test_news_pipeline.py  test_scoring.py  test_unified_run_token_usage.py  test_upstox_feed.py
(+27 files in other folders)
