[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-research"
version = "0.1.0"
description = "Real-time Indian stock market analysis system for Nifty 50 options trading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "django>=5.1",
  "djangorestframework>=3.15",
  "django-cors-headers>=4.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "langchain>=0.3.25",
  "langgraph>=0.2.60",
  "langchain-openai>=0.2.14",
  "pyyaml>=6.0.2",
  "protobuf>=5.28",
  "websockets>=13.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "discord.py>=2.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-django>=4.8",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "backend/tests"]
DJANGO_SETTINGS_MODULE = "tests.settings_test"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false
